--- a/latex/references.bib
+++ b/latex/references.bib
@@ -75,3 +75,10 @@
   year={2021},
   publisher={IOP Publishing}
 }
+
+@article{yale_data,
+  title={EXPRES Stellar-Signals Project},
+  author={Lily Zhao and others},
+  publisher={Yale University},
+  url={https://exoplanets.astro.yale.edu/science/activity.php},
+}    
