--- a/latex/sections/discussion.tex
+++ b/latex/sections/discussion.tex
@@ -1,8 +1,18 @@
+
+I would have liked to have performed RV extractions on spectra data that I had calibrated myself. But, it was not possible for me get access to spectra data with associated LFC spectra. So the two parts of the project, calibration and rv extractions, have been somewhat seperated. 
+
+
+I should have liked to compare my 
+
+Although the LFC calibration initially was the main aspect of the project, I ended up spending much more time on the RV extractions. 
+
+
 \textbf{Future ideas:}
 \begin{itemize}
     \item Errors
-    \item Errors from the interpolation, the more points we sample the smaller the error??
-    \item Filters: chauvenet's, rv cut, z-score cut
+    \item Errors from the interpolation, the more points we sample the smaller the error?
+    \item Filters: chauvenet's, rv cut, z-score cut, always having the barycentric data to confirm if it works is good. Weighting of lines/features based on the stability. Just like Lily et al do in the chunk-by-chunk method \href{https://backend.orbit.dtu.dk/ws/portalfiles/portal/273001166/Zhao_2022_AJ_163_171.pdf}{paper.}.
+
 \end{itemize}
 
 
