--- a/latex/sections/theory.tex
+++ b/latex/sections/theory.tex
@@ -44,7 +44,7 @@ Wavelength calibrations are performed with the use of a Laser Frequency Comb
 
 \bigbreak
 \noindent\textbf{Spectral resolution:}
-EXPRES has a spectral resolution of $R = 150'000$, where R is defined as $R = \lambda / \Delta\lambda$. Inverting this we get what's called the resolution element of the Instrumental Spread Function (ISF) (or Line Spread Function (LSF)), $\Delta\lambda = \lambda/R$. For a wavelength of say of $\lambda = 5000$Å, this comes out to $\Delta\lambda = 5000\text{Å}/150,000 \approx 0.033 $Å, and it describes the "blurring" of monochromatic beams on the detector. Absorption features narrower than $\Delta\lambda$ can, in a well-behaved spectrograph, be approximated as a normalized, symmetric Gausssian function with $\text{FWHM} = \Delta\lambda$. Specifically for EXPRES, a super-gauss is however a better fit. LFC lines being monochromatic and thus very narrow will appear on the detector as a super-gaussian with $\Delta\lambda$ ranging from 3.9-5 pixels across the detector. By fitting, the center of the peak can be identified to a fraction of a pixel. The LFC peaks are seperated by about 10 pixels to remain distinct after this blurring. For star-spectra however some emission and absorption lines will be too close together and will appear "blended" on the detector. 
+EXPRES has a spectral resolution of $R = 150'000$, where R is defined as $R = \lambda / \Delta\lambda$. Inverting this we get what's called the resolution element of the Instrumental Spread Function (ISF) (or Line Spread Function (LSF)), $\Delta\lambda = \lambda/R$. For a wavelength of say of $\lambda = 5000$Å, this comes out to $\Delta\lambda = 5000\text{Å}/150,000 \approx 0.033 $Å, and it describes the "blurring" of monochromatic beams on the detector. Absorption features narrower than $\Delta\lambda$ can, in a well-behaved spectrograph, be approximated as a normalized, symmetric Gausssian function with $\text{FWHM} = \Delta\lambda$. Specifically for EXPRES, a super-gauss is however a better fit. LFC lines being monochromatic and thus very narrow will appear on the detector as a super-gaussian with $\Delta\lambda$ ranging from 3.9-5 pixels across the detector. By fitting, the center of the peak can be identified to a fraction of a pixel. The LFC lines are seperated by about 10 pixels to remain distinct after this blurring. For star-spectra however some emission and absorption lines will be too close together and will appear "blended" on the detector. 
 
 \bigbreak
 \noindent\textbf{Barycentric correction:}
